Bug 421451 - Kate raises hspell error when launched from command line
Summary: Kate raises hspell error when launched from command line
Status: RESOLVED FIXED
Alias: None
Product: frameworks-sonnet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
: 420469 433154 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-13 09:26 UTC by hugo.roche.derville
Modified: 2024-07-23 16:16 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hugo.roche.derville 2020-05-13 09:26:17 UTC
The following error is raised when launching Kate from command line:

Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.
sonnet.plugins.hspell: HSpellDict::HSpellDict: Init failed


System Information:
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Kernel Version: 5.4.0-29-generic
OS Type: 64-bit
Comment 1 chimak111 2020-05-17 13:55:24 UTC
The same error is in KWrite Version 20.04.0:

Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 2 Justin Zobel 2020-11-10 04:38:16 UTC
Confirmed on kate from git master.
Comment 3 Waqar Ahmed 2020-12-17 08:43:10 UTC
I cannot reproduce this.

Can someone confirm if they have this file available: "/usr/share/hspell/hebrew.wgz.sizes"? And is HSpell installed properly along with its required dictionaries?

For completeness, here are the contents of my /usr/share/hspell:

.rw-r--r-- root root 112 KB Tue May 19 14:31:12 2020 hebrew.wgz
.rw-r--r-- root root 134 KB Tue May 19 14:31:12 2020 hebrew.wgz.desc
.rw-r--r-- root root 4.3 KB Tue May 19 14:31:12 2020 hebrew.wgz.hints
.rw-r--r-- root root  45 KB Tue May 19 14:31:12 2020 hebrew.wgz.prefixes
.rw-r--r-- root root  33 B  Tue May 19 14:31:12 2020 hebrew.wgz.sizes
.rw-r--r-- root root 369 KB Tue May 19 14:31:12 2020 hebrew.wgz.stems
Comment 4 Justin Zobel 2020-12-18 22:56:09 UTC
(In reply to Waqar Ahmed from comment #3)
> I cannot reproduce this.
> 
> Can someone confirm if they have this file available:
> "/usr/share/hspell/hebrew.wgz.sizes"? And is HSpell installed properly along
> with its required dictionaries?
> 
> For completeness, here are the contents of my /usr/share/hspell:
> 
> .rw-r--r-- root root 112 KB Tue May 19 14:31:12 2020 hebrew.wgz
> .rw-r--r-- root root 134 KB Tue May 19 14:31:12 2020 hebrew.wgz.desc
> .rw-r--r-- root root 4.3 KB Tue May 19 14:31:12 2020 hebrew.wgz.hints
> .rw-r--r-- root root  45 KB Tue May 19 14:31:12 2020 hebrew.wgz.prefixes
> .rw-r--r-- root root  33 B  Tue May 19 14:31:12 2020 hebrew.wgz.sizes
> .rw-r--r-- root root 369 KB Tue May 19 14:31:12 2020 hebrew.wgz.stems

After testing (on a different OS from last time, now Solus) I can't reproduce the issue. kate launches without any terminal feedback showing missing dictionary files.
Comment 5 Bug Janitor Service 2021-01-02 04:34:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Christoph Feck 2021-01-09 16:49:27 UTC
I remember it was recently fixed. There was even a blog post about it.
Comment 7 g111 2022-01-04 09:57:34 UTC
Operating System: Kubuntu 21.10
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.13.0-22-generic (64-bit)
Graphics Platform: X11

I still get the warning when starting e.g. kwrite

Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.
kf.sonnet.clients.hspell: HSpellDict::HSpellDict: Init failed

I do not have hspell installed. Also I do not need hebrew spell checking on my system. So why is this warning given? (And why not other languages, too?)
Comment 8 Justin Zobel 2022-01-04 22:07:27 UTC
Reopening due to user post.
Comment 9 Waqar Ahmed 2022-01-05 06:04:04 UTC
> I do not have hspell installed. 

> Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.

The above lines says that you do have it installed but don't have the dictionaries. Please either uninstall it completely or install the dictionaries and check if its still giving warnings.

https://packages.ubuntu.com/hirsute/amd64/hspell/filelist shows the list of files installed on your system if hspell is installed.
Comment 10 g111 2022-01-05 08:13:38 UTC
Hello Waqar,

at least I do not have an "hspell" package installed. Maybe it comes in another package name? Here are all installed packages with "spell" in their name or description title:

$ dpkg -l | grep spell
ii  aspell                                        0.60.8-3                                    amd64        GNU Aspell spell-checker
ii  aspell-en                                     2018.04.16-0-1                              all          English dictionary for GNU Aspell
ii  dictionaries-common                           1.28.4                                      all          spelling dictionaries - common utilities
ii  enchant-2                                     2.3.1-1                                     amd64        Wrapper for various spell checker engines (binary programs)
ii  hunspell-de-at-frami                          1:7.1.0~rc3-3                               all          German (Austria) dictionary for hunspell ("frami" version)
ii  hunspell-de-ch-frami                          1:7.1.0~rc3-3                               all          German (Switzerland) dictionary for hunspell ("frami" version)
ii  hunspell-de-de-frami                          1:7.1.0~rc3-3                               all          German dictionary for hunspell ("frami" version)
ii  hunspell-en-us                                1:2019.10.06-1                              all          English_american dictionary for hunspell
ii  libaspell15:amd64                             0.60.8-3                                    amd64        GNU Aspell spell-checker runtime library
ii  libenchant-2-2:amd64                          2.3.1-1                                     amd64        Wrapper library for various spell checker engines (runtime libs)
ii  libhfstospell11:amd64                         0.5.2-1build2                               amd64        HFST spell checker runtime libraries
ii  libhunspell-1.7-0:amd64                       1.7.0-3                                     amd64        spell checker and morphological analyzer (shared library)
ii  libkf5sonnet5-data                            5.89.0-0ubuntu1~ubuntu21.10~ppa1            all          spell checking library for Qt, data files
ii  libkf5sonnetcore5:amd64                       5.89.0-0ubuntu1~ubuntu21.10~ppa1            amd64        spell checking library for Qt, core lib
ii  libkf5sonnetui5:amd64                         5.89.0-0ubuntu1~ubuntu21.10~ppa1            amd64        spell checking library for Qt, ui lib
ii  libqt5hunspellinputmethod5:amd64              5.15.2+dfsg-2                               amd64        Qt virtual keyboard - helper library for Hunspell input method
ii  python3-enchant                               3.2.0-1                                     all          spellchecking library for Python 3
ii  qml-module-org-kde-sonnet:amd64               5.89.0-0ubuntu1~ubuntu21.10~ppa1            amd64        spell checking library for Qt, plugins
ii  sonnet-plugins:amd64                          5.89.0-0ubuntu1~ubuntu21.10~ppa1            amd64        spell checking library for Qt, plugins

The whole /usr/share/hspell directory is not present:
$ ls -l /usr/share/hspell
ls: cannot access '/usr/share/hspell': No such file or directory
Comment 11 Waqar Ahmed 2022-01-05 08:22:26 UTC
try the following instead:

sudo find / -iname *hspell*
Comment 12 g111 2022-01-05 11:31:45 UTC
root# find / -iname *hspell*
find: ‘/run/user/1000/doc’: Permission denied
/usr/lib/x86_64-linux-gnu/enchant-2/enchant_hspell.so
/usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/sonnet/sonnet_hspell.so
/snap/gnome-3-28-1804/161/usr/lib/x86_64-linux-gnu/enchant/libenchant_hspell.so

This is all.
Comment 13 Bug Janitor Service 2022-01-20 04:36:50 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 14 g111 2022-01-22 21:54:25 UTC
Hello,
which Info are you waiting for?
Comment 15 Bug Janitor Service 2022-02-06 04:37:23 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 16 Bug Janitor Service 2022-02-21 04:36:38 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 17 Fergal Mullally 2022-09-16 18:06:52 UTC
For anyone coming across this issue, I solved it by installing hspell on my system with apt. It's about 1.2Mb in size

```
sudo apt install hspell -y
````

My guess -- and it's only a guess -- is that Kate comes bundled with hspell, but it missing some of the dictionary files. Installing hspell directly installs those dictionary files and removes the warning.
Comment 18 tony den haan 2024-01-24 10:43:00 UTC
(In reply to Fergal Mullally from comment #17)
> For anyone coming across this issue, I solved it by installing hspell on my
> system with apt. It's about 1.2Mb in size
> 
> ```
> sudo apt install hspell -y
> ````
> 
> My guess -- and it's only a guess -- is that Kate comes bundled with hspell,
> but it missing some of the dictionary files. Installing hspell directly
> installs those dictionary files and removes the warning.

But why does it even try? I don't need Hebrew spelling.
Comment 19 Lucas Gallindo 2024-07-22 14:39:56 UTC
(In reply to Christoph Feck from comment #6)
> I remember it was recently fixed. There was even a blog post about it.

On a up to date Ubuntu Budgie 22.04.2 LTS x86_64, kate installed from Muon package manager:

Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.                                                                    
kf.sonnet.clients.hspell: HSpellDict::HSpellDict: Init failed                                                             

What really bugs me is: Why do I need a Hebrew dictionary?
Comment 20 Waqar Ahmed 2024-07-22 16:28:22 UTC
*** Bug 433154 has been marked as a duplicate of this bug. ***
Comment 21 Waqar Ahmed 2024-07-22 16:28:43 UTC
*** Bug 420469 has been marked as a duplicate of this bug. ***
Comment 22 Waqar Ahmed 2024-07-23 16:16:50 UTC
Git commit 2a9ce5916367967f6321ded4f4a75374f9b76d4e by Waqar Ahmed.
Committed on 22/07/2024 at 16:23.
Pushed by cullmann into branch 'master'.

Avoid initializing full HSpellDict when getting languages

We can just check if the dictionary exists at the given path

M  +8    -5    src/plugins/hspell/hspellclient.cpp

https://invent.kde.org/frameworks/sonnet/-/commit/2a9ce5916367967f6321ded4f4a75374f9b76d4e