Avoid initializing full HSpellDict when getting languages

We can just check if the dictionary exists at the given path

BUG: 421451